@@ -1,2 +1,2 @@
-deprecated-module:3:0:3:26::Uses of a deprecated module 'deprecated':UNDEFINED
-deprecated-module:4:0:4:17::Uses of a deprecated module 'deprecated':UNDEFINED
+deprecated-module:3:0:3:26::Deprecated module 'deprecated':UNDEFINED
+deprecated-module:4:0:4:17::Deprecated module 'deprecated':UNDEFINED
